src/test/06-Errors/error-ctor-return.txt
error-ctor-return.ck:5:5: error: constructor must return void...
[5]     fun int Foo() { return 1; }
        ^
